For a documentation of all features, see http://semantic-mediawiki.org


== SMW 1.7.1 ==

THIS IS NOT A RELEASE YET 

Semantic MediaWiki 1.7.1 is currently in beta-quality and is not recommended for use in
production until the actual release.

* Fixed bug in "further results" links causing the main column to be displayed twice on Special:Ask.

== SMW 1.7 ==

Released on January 1, 2012.

* Added native "internal objects" that can be set using #subobject.
* Added support for selecting a default graph when using RDF stores,
  configuration called $smwgSparqlDefaultGraph
* Use of native MediaWiki sortable tables for the table formats.
* Added value distribution functionality that can be used by result formats. 
* Added validation and manipulation of the format parameter using Validator.
* Added 'class' parameter to the 'table' format, which allows setting the CSS
  class.
* Added automatically-generated CSS classes for rows and cells in 'table' format.
* Added alpha version of native SMW Ask API with modules 'ask' and 'askargs'.
* Added alpha version of a new ask query interface: Special:QueryCreator.
* Added setting to choose which optional special properties are enabled ($smwgPageSpecialProperties).
* Added creation date special property (disabled by default) (bug 32165).
* Added support for altitudes in geographic coordinates (bug 32698).
* Added definitions for missing params (sort, order, searchlabel) to the base query printer.
* Added automatic invocation of the SMW_setup maintenance script when running
  update.php (for MW >= 1.19).
* Added support for the Page Schemas extension.
* Removed defunct "SMWLight" files.
* Fixed separator and filename parameters for the DSV format.
* Fixed display of properties of type URL (bug 30912).
* Fixed hide query functionality on Special:Ask (bug 30768).
* Fixed display of internal SMW helper constants in certain queries (bug 30969).
* Fixed some issues with the category result format (including bug 30761).